@@ -20,6 +20,8 @@
 
 ========================
 10/16
+	* Corrected issen's range to 5, as per the login packet information.
+	  [Skotlex]
 	* Applied most of Mpeg's work on Ninja Skills. For information see:
 	  http://gpegon.free.fr/ea/ninja_10-15-06_mpeg.txt [Skotlex]
 	* Small Kiel MVP drop rate increase [Playtester]
